scss/_popup.scss
/**
 * Popups
 * --------------------------------------------------
 */

.popup {
  position: fixed;
  top: 50%;
  left: 50%;
  z-index: $z-index-popup;

  // Start hidden
  visibility: hidden;

  width: $popup-width;
  max-width: 100%;

  border-radius: $popup-border-radius;
  background-color: $popup-background-color;

  &.popup-hidden {
    @include animation-name(scaleOut);
    @include animation-duration($popup-leave-animation-duration);
    @include animation-timing-function(ease-in-out);
    @include animation-fill-mode(both);
  }

  &.popup-showing {
    visibility: visible;
  }

  &.active {
    @include animation-name(superScaleIn);
    @include animation-duration($popup-enter-animation-duration);
    @include animation-timing-function(ease-in-out);
    @include animation-fill-mode(both);
  }
  &.popup-tall{
    overflow:hidden;
    .popup-body{
      overflow:auto;
    }
  }
}

.popup-head {
  padding: 15px 0px;
  border-bottom: 1px solid #eee;
  text-align: center;
}
.popup-title {
  margin: 0;
  padding: 0;
  font-size: 15px;
}
.popup-sub-title {
  margin: 5px 0 0 0;
  padding: 0;
  font-weight: normal;
  font-size: 11px;
}
.popup-body {
  padding: 10px;
}

.popup-buttons {
  &.row {
    padding: 10px 10px;
  }

  .button {
    margin: 0px 5px;
    min-height: $popup-button-min-height;
    border-radius: $popup-button-border-radius;
    line-height: $popup-button-line-height;

    &:first-child {
      margin-left: 0px;
    }
    &:last-child {
      margin-right: 0px;
    }
  }
}

.popup-open {
  pointer-events: none;

  &.modal-open .modal {
    pointer-events: none;
  }

  .popup-backdrop, .popup {
    pointer-events: auto;
  }
}

